@@ -1,7 +1,7 @@
 # ex: set ro:
 # $Id$
 #
-# generated by tools/dev/mk_manifest_and_skip.pl Sat May 15 04:11:15 2010 UT
+# generated by tools/dev/mk_manifest_and_skip.pl Sat May 15 08:19:58 2010 UT
 #
 # See below for documentation on the format of this file.
 #
@@ -1121,6 +1121,7 @@ lib/Pod/Simple/TranscodeSmart.pm                            []
 lib/Pod/Simple/XHTML.pm                                     []
 lib/Pod/Simple/XMLOutStream.pm                              []
 parrotbug                                                   []
+runtime/parrot/bin/prove.pir                                [library]
 runtime/parrot/dynext/README                                []doc
 runtime/parrot/include/README                               []doc
 runtime/parrot/include/fp_equality.pasm                     [library]
@@ -2130,7 +2131,6 @@ tools/dev/reconfigure.pl                                    [devel]
 tools/dev/search-ops.pl                                     []
 tools/dev/svnclobber.pl                                     []
 tools/dev/symlink.pl                                        []
-tools/dev/tapir.pir                                         []
 tools/dev/vgp                                               []
 tools/dev/vgp_darwin                                        []
 tools/dev/vms-patch                                         []
