@@ -142,8 +142,8 @@ installable_pbc_merge                            [main]bin
 installable_pbc_merge.exe                        [main]bin
 installable_pbc_to_exe                           [main]bin
 installable_pbc_to_exe.exe                       [main]bin
-installable_tapir                                [main]bin
-installable_tapir.exe                            [main]bin
+installable_parrot-prove                         [main]bin
+installable_parrot-prove.exe                     [main]bin
 lib/Parrot/Config/Generated.pm                   [devel]lib
 lib/Parrot/OpLib/core.pm                         [devel]lib
 lib/Parrot/PMC.pm                                [devel]lib
